1.1.9.dev0
 * #29: Support for using tilde in source directory path to reference home directory.

1.1.8
 * #39: Fix to make /etc/borgmatic/config.yaml optional rather than required when using the default
   config paths.

1.1.7

 * #28: Add "archive_name_format" to configuration for customizing archive names.
 * Fix for traceback when "exclude_from" value is empty in configuration file.
 * When pruning, make highest verbosity level list archives kept and pruned.
 * Clarification of Python 3 pip usage in documentation.

1.1.6

 * #12, #35: Support for Borg --exclude-from, --exclude-caches, and --exclude-if-present options.

1.1.5

 * #34: New "extract" consistency check that performs a dry-run extraction of the most recent
   archive.

1.1.4

 * #17: Added command-line flags for performing a borgmatic run with only pruning, creating, or
   checking enabled. This supports use cases like running consistency checks from a different cron
   job with a different frequency, or running pruning with a different verbosity level.

1.1.3

 * #14: Support for running multiple config files in /etc/borgmatic.d/ from a single borgmatic run.
 * Fix for generate-borgmatic-config writing config with invalid one_file_system value.

1.1.2

 * #32: Fix for passing check_last as integer to subprocess when calling Borg.

1.1.1

 * Part of #32: Fix for upgrade-borgmatic-config converting check_last option as a string instead of
   an integer.
 * Fix for upgrade-borgmatic-config erroring when consistency checks option is not present.

1.1.0

 * Switched config file format to YAML. Run upgrade-borgmatic-config to upgrade.
 * Added generate-borgmatic-config command for initial config creation.
 * Dropped Python 2 support. Now Python 3 only.
 * #18: Fix for README mention of sample files not included in package.
 * #22: Sample files for triggering borgmatic from a systemd timer.
 * Support for backing up to multiple repositories.